--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     user: root
     environment:
       - POSTGRES_USER=odoo
-      - POSTGRES_PASSWORD=odoo18@2024
+      - POSTGRES_PASSWORD=odoo
       - POSTGRES_DB=postgres
     restart: always             # run as a service
     volumes:
@@ -24,13 +24,11 @@ services:
     environment:
       - HOST=db
       - USER=odoo
-      - PASSWORD=odoo18@2024
-      - PIP_BREAK_SYSTEM_PACKAGES=1
+      - PASSWORD=odoo
     volumes:
       #- /etc/timezone:/etc/timezone:ro
       #- /etc/localtime:/etc/localtime:ro
-      - ./entrypoint.sh:/entrypoint.sh
+      # - ./entrypoint.sh:/entrypoint.sh   # if you want to install additional Python packages, uncomment this line!
       - ./addons:/mnt/extra-addons
       - ./etc:/etc/odoo
     restart: always             # run as a service
-    
